refator: 한글 파일 깨짐 문제 해결 및, 폴더 구조 변경